packages/parser/test/parser/E0112.txt
a := test ? : 1
===== err =====
anonymous:1:12: ParseError: E0112 - Expected conditional expression consequent after question mark
1 | a := test ? : 1
  |            ^
